--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "eccd799a-91bd-4b5d-aeb1-aa5ec4dfb3a1"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
@@ -66,6 +69,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "port": 5000
+          },
           "configurations": {
             "production": {
               "browserTarget": "spotify:build:production"
